# python-project-lvl1

./: .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
annick2908_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: __init__.py  cli.py  game_logic.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
