[tool.poetry]
name = "ANnick2908_brain_games"
version = "0.1.0"
description = "The program of the 1st project on Hexlet"
authors = ["ANnick2908 <annick2908@gmail.com>"]
packages = [
    { include = "brain_games" },
   ]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
