[tool.poetry]
name = "ANnick2908_brain_games"
version = "0.5.1"
description = "The program of the 1st project on Hexlet"
authors = ["ANnick2908 <annick2908@gmail.com>"]
packages = [
    { include = "brain_games" },
   ]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"
flake8 = "^3.8.2"
flake8-executable = "^2.0.3"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

